--- a/index.html
+++ b/index.html
@@ -6,94 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout de ejemplo</title>
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
     <header class="header">
-        <div class="header-div">
-            <img class="header-div_logo" src="./images/logo.png" alt="logo" />
-            <h1 class="header-div_title">LayoutDeEjemplo</h1>
-        </div>
-
-        <nav>
-            <ul class="header-nav">
-                <li>
-                    <a class="header-nav_link" href="#">Link1</a>
-                </li>
-                <li><a class="header-nav_link" href="#">Link2</a></li>
-                <li><a class="header-nav_link" href="#">Link3</a></li>
-                <li><a class="header-nav_link" href="#">Link4</a></li>
-            </ul>
+        <section class="header-container">
+            <img class="logo" src="./images/logo.png" alt="logo" />
+            <h1 class="header-title">LayoutDeEjemplo</h1>
+        </section>
+        <nav class="header-nav container">
+            <a class="header-nav_link" href="#">Link1</a>
+            <a class="header-nav_link" href="#">Link2</a>
+            <a class="header-nav_link" href="#">Link3</a>
+            <a class="header-nav_link" href="#">Link4</a>
         </nav>
     </header>
+
     <main class="main">
-        <section class="main-Section">
-            <h2 class="main-Section_subtitles">Lorem ipsum, dolor sit amet</h2>
-            <p class="main-Section_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-                praesentium culpa, alias quisquam quaerat esse maiores repellat
-                deleniti eos ratione sequi nesciunt tenetur vel, expedita, autem
-                itaque amet unde. Sunt.
-            </p>
-        </section>
-        <section class="main-Section">
-            <hr class="main-Section_horizontalRule" />
-            <h2 class="main-Section_subtitles">Lorem ipsum, dolor sit amet</h2>
-            <div class="main-Section_div"><div class="vl"></div>
-            <p class="main-Section_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-                praesentium culpa, alias quisquam quaerat esse maiores repellat
-                deleniti eos ratione sequi nesciunt tenetur vel, expedita, autem
-                itaque amet unde. Sunt.
-            </p></div>
-            
-        </section>
-        <section class="main-Section">
-            <hr class="main-Section_horizontalRule" />
-            <h2 class="main-Section_subtitles">Lorem ipsum, dolor sit amet</h2>
-            <p class="main-Section_text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-                praesentium culpa, alias quisquam quaerat esse maiores repellat
-                deleniti eos ratione sequi nesciunt tenetur vel, expedita, autem
-                itaque amet unde. Sunt.
-            </p>
-        </section>
-        <aside>
-            <section></section>
-            <section></section>
-        </aside>
+        <div class="main-container">
+            <div class="main-line"> </div>
+            <section class="main-Section">
+                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
+                <p class="main-Section_text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
+                    veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
+                    Quae iste perspiciatis voluptate maxime fuga
+                </p>
+            </section>
+            <section class="main-Section">
+                <hr class="main-Section_horizontalRule" />
+                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
+                <div class="main-Section_div">
+                    <div class="vl"></div>
+                    <p class="main-Section_textDiferent ">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
+                        veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
+                        Quae iste perspiciatis voluptate maxime fuga
+                    </p>
+                </div>
+
+            </section>
+            <section class="main-Section">
+                <hr class="main-Section_horizontalRule" />
+                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
+                <p class="main-Section_text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
+                    veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
+                    Quae iste perspiciatis voluptate maxime fuga
+                </p>
+            </section>
+            <aside class="aside-principalContainer ">
+                <div class="aside_container1"></div>
+                <div class="aside_container2"></div>
+            </aside>
+        </div>
     </main>
 
     <footer class="footer">
-        <div class="footer-nav">
-            <nav>
-                <ul class="footer-nav"">
-                <li>
-                  <a class=" footer-nav_link" href="#">Link1</a>
-                    </li>
-                    <li><a class="footer-nav_link" href="#">Link2</a></li>
-                    <li><a class="footer-nav_link" href="#">Link3</a></li>
-                    <li><a class="footer-nav_link" href="#">Link4</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div>
-            <nav>
-                <ul class="footer-redes">
-                    <li> 
-                        <a class="footer-redes_link" href="#">FB<a>
-                    </li>
-                    <li> 
-                        <a class="footer-redes_link" href="#">TW<a>
-                    </li>
-                    <li>
-                        <a class="footer-redes_link" href="#">G+<a>
-                    </li>
-                </ul>
+        <section class="header-container">
+        <nav class="footer_container1 containerFooter  ">
+            <a class="footer-nav_link  " href="">Link1</a>
+            <a class="footer-nav_link" href="">Link2</a>
+            <a class="footer-nav_link" href="">Link3</a>
+            <a class="footer-nav_link" href="">Link4</a>
+        </nav>
+</section>
 
-            </nav>
-        </div>
+        <nav class="footer_container2">
+            <a class="footer-redes_link" href="#">FB<a>
+
+            <a class="footer-redes_link" href="#">TW<a>
+
+            <a class=" footer-redes_link" href="#">G+<a>
+        </nav>
+ 
+
     </footer>
 </body>
 
