--- a/index.html
+++ b/index.html
@@ -16,72 +16,91 @@
             <img class="logo" src="./images/logo.png" alt="logo" />
             <h1 class="header-title">LayoutDeEjemplo</h1>
         </section>
-        <nav class="header-nav container">
-            <a class="header-nav_link" href="#">Link1</a>
-            <a class="header-nav_link" href="#">Link2</a>
-            <a class="header-nav_link" href="#">Link3</a>
-            <a class="header-nav_link" href="#">Link4</a>
+        <nav class="principal-nav ">
+            <ul class="principal-nav_ul">
+                <li class="principal-nav_item">
+                    <a class="principal-nav_link" href="#">Link1<a>
+                </li>
+                <li class="principal-nav_item">
+                    <a class="principal-nav_link" href="#">Link2</a>
+                </li>
+                <li class="principal-nav_item"><a class="principal-nav_link" href="#">Link3</a></li>
+                <li class="principal-nav_item"><a class="principal-nav_link" href="#">Link4</a></li>
+            </ul>
+
         </nav>
     </header>
 
-    <main class="main">
-        <div class="main-container">
-            <div class="main-line"> </div>
-            <section class="main-Section">
-                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
-                <p class="main-Section_text">
+    <main>
+        <div class="sections">
+
+            <section class="section">
+                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
+                <p class="gray-line section__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
-            <section class="main-Section">
-                <hr class="main-Section_horizontalRule" />
-                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
-                <div class="main-Section_div">
-                    <div class="vl"></div>
-                    <p class="main-Section_textDiferent ">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
-                        veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
-                        Quae iste perspiciatis voluptate maxime fuga
-                    </p>
-                </div>
+            <section class="section">
+                <hr />
+                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
 
+                <span> </span>
+                <p class=" section__text__midle ">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
+                    veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
+                    Quae iste perspiciatis voluptate maxime fuga
+                </p>
             </section>
-            <section class="main-Section">
-                <hr class="main-Section_horizontalRule" />
-                <h2 class="main-Section_text">Lorem ipsum, dolor sit amet</h2>
-                <p class="main-Section_text">
+            <section class="section">
+                <hr />
+                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
+                <p class="section__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
             <aside class="aside-principalContainer ">
-                <div class="aside_container1"></div>
-                <div class="aside_container2"></div>
+                <section class="aside_container1"></section>
+                <section class="aside_container2"></section>
             </aside>
         </div>
+
     </main>
 
     <footer class="footer">
-        <section class="header-container">
-        <nav class="footer_container1 containerFooter  ">
-            <a class="footer-nav_link  " href="">Link1</a>
-            <a class="footer-nav_link" href="">Link2</a>
-            <a class="footer-nav_link" href="">Link3</a>
-            <a class="footer-nav_link" href="">Link4</a>
+
+        <nav>
+            <ul class="second-nav_ul">
+                <li class="second-nav_item">
+                    <a class="second-nav_link" href="">Link1</a>
+                </li>
+                <li class="second-nav_item">
+                    <a class="second-nav_link" href="">Link2</a>
+                </li>
+                <li class="second-nav_item">
+                    <a class="second-nav_link" href="">Contacto</a>
+                </li>
+                <li class="second-nav_item">
+                    <a class="second-nav_link" href="">Equipo</a>
+                </li>
+            </ul>
         </nav>
-</section>
 
-        <nav class="footer_container2">
-            <a class="footer-redes_link" href="#">FB<a>
 
-            <a class="footer-redes_link" href="#">TW<a>
+        <nav>
+            <ul class="third-nav_ul">
+                <li class="third-nav_item">
+                    <a class="third-nav_link" href="#">FB<a></a>
+                </li>
+                <li class="third-nav_item"> <a class="third-nav_link" href="#">TW<a></a></li>
+                <li class="third-nav_item"><a class=" third-nav_link" href="#">G+<a></a></li>
+                </ </ul>
 
-            <a class=" footer-redes_link" href="#">G+<a>
         </nav>
- 
+
 
     </footer>
 </body>
