--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <section class="header-container">
             <img class="logo" src="./images/logo.png" alt="logo" />
@@ -19,7 +19,7 @@
         <nav class="principal-nav ">
             <ul class="principal-nav_ul">
                 <li class="principal-nav_item">
-                    <a class="principal-nav_link" href="#">Link1<a>
+                    <a class="principal-nav_link" href="#">Link1</a>
                 </li>
                 <li class="principal-nav_item">
                     <a class="principal-nav_link" href="#">Link2</a>
@@ -31,19 +31,19 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-container">
         <div class="sections">
 
-            <section class="section">
+            <section class=" section ">
                 <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
-                <p class="gray-line section__text">
+                <p class=" section__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
             <section class="section">
-                <hr />
+                <hr class="hr" />
                 <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
 
                 <span> </span>
@@ -54,19 +54,21 @@
                 </p>
             </section>
             <section class="section">
-                <hr />
+                <hr class="hr" />
                 <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
-                <p class="section__text">
+                <p class="section__text margin">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
-            <aside class="aside-principalContainer ">
-                <section class="aside_container1"></section>
-                <section class="aside_container2"></section>
-            </aside>
+
         </div>
+
+        <aside class="aside ">
+            <section class="aside_container "></section>
+            <section class="aside_container"></section>
+        </aside>
 
     </main>
 
