--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout de ejemplo</title>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/main.css" />
 </head>
 
@@ -83,10 +84,10 @@
                     <a class="second-nav_link" href="">Link2</a>
                 </li>
                 <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Contacto</a>
+                    <a class="second-nav_link" href="">Link3</a>
                 </li>
                 <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Equipo</a>
+                    <a class="second-nav_link" href="">Link4</a>
                 </li>
             </ul>
         </nav>
@@ -95,11 +96,11 @@
         <nav>
             <ul class="third-nav_ul">
                 <li class="third-nav_item">
-                    <a class="third-nav_link" href="#">FB<a></a>
+                    <a class="third-nav_link" href="#">FB</a>
                 </li>
-                <li class="third-nav_item"> <a class="third-nav_link" href="#">TW<a></a></li>
-                <li class="third-nav_item"><a class=" third-nav_link" href="#">G+<a></a></li>
-                </ </ul>
+                <li class="third-nav_item"> <a class="third-nav_link" href="#">TW</a></li>
+                <li class="third-nav_item"><a class=" third-nav_link" href="#">G+</a></li>
+            </ul>
 
         </nav>
 
