--- a/index.html
+++ b/index.html
@@ -14,97 +14,95 @@
 <body class="body">
     <header class="header">
         <section class="header-container">
-            <img class="logo" src="./images/logo.png" alt="logo" />
-            <h1 class="header-title">LayoutDeEjemplo</h1>
+            <img class="header-container_logo" src="./images/logo.png" alt="logo" />
+            <h1 class="header-container_title">LayoutDeEjemplo</h1>
         </section>
-        <nav class="principal-nav ">
-            <ul class="principal-nav_ul">
-                <li class="principal-nav_item">
+        <nav class="header-principal_nav ">
+            <ul class="header-principalNav_ul">
+                <li class="header-principalNav_item">
                     <a class="principal-nav_link" href="#">Link1</a>
                 </li>
-                <li class="principal-nav_item">
+                <li class="header-principalNav_item">
                     <a class="principal-nav_link" href="#">Link2</a>
                 </li>
-                <li class="principal-nav_item"><a class="principal-nav_link" href="#">Link3</a></li>
-                <li class="principal-nav_item"><a class="principal-nav_link" href="#">Link4</a></li>
+                <li class="header-principalNav_item">
+                    <a class="principal-nav_link" href="#">Link3</a>
+                </li>
+                <li class="header-principalNav_item">
+                    <a class="principal-nav_link" href="#">Link4</a>
+                </li>
             </ul>
 
         </nav>
     </header>
 
-    <main class="main-container">
-        <div class="sections">
+    <main class="main">
+        <div class="container">
 
-            <section class=" section ">
-                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
-                <p class=" section__text">
+            <section class=" container-section ">
+                <h2 class="container-section__title">Lorem ipsum, dolor sit amet</h2>
+                <p class=" container-section__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
-            <section class="section">
+            <section class="container-section">
                 <hr class="hr" />
-                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
-
-                <span> </span>
-                <p class=" section__text__midle ">
+                <h2 class="container-section__title">Lorem ipsum, dolor sit amet</h2>
+                <p class=" container-section__text__midle ">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
-            <section class="section">
+            <section class="container-section">
                 <hr class="hr" />
-                <h2 class="section__title">Lorem ipsum, dolor sit amet</h2>
-                <p class="section__text margin">
+                <h2 class="container-section__title">Lorem ipsum, dolor sit amet</h2>
+                <p class="container-section__text margin">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque alias, rem temporibus minima
                     veritatis assumenda eaque, ipsum aliquid tempora impedir nam labore laudantium, delectus.
                     Quae iste perspiciatis voluptate maxime fuga
                 </p>
             </section>
-
         </div>
-
         <aside class="aside ">
             <section class="aside_container "></section>
             <section class="aside_container"></section>
         </aside>
-
     </main>
 
     <footer class="footer">
-
-        <nav>
-            <ul class="second-nav_ul">
-                <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Link1</a>
+        <nav class="footer-second_nav">
+            <ul class="footer-secondNav_ul">
+                <li class="footer-second-nav_item">
+                    <a class="footer-secondNav_link" href="">Link1</a>
                 </li>
-                <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Link2</a>
+                <li class="footer-second-nav_item">
+                    <a class="footer-secondNav_link" href="">Link2</a>
                 </li>
-                <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Link3</a>
+                <li class="footer-second-nav_item">
+                    <a class="footer-secondNav_link" href="">Link3</a>
                 </li>
-                <li class="second-nav_item">
-                    <a class="second-nav_link" href="">Link4</a>
+                <li class="footer-second-nav_item">
+                    <a class="footer-secondNav_link" href="">Link4</a>
                 </li>
             </ul>
         </nav>
-
-
-        <nav>
-            <ul class="third-nav_ul">
-                <li class="third-nav_item">
-                    <a class="third-nav_link" href="#">FB</a>
+        <nav class="footer-thrid_nav">
+            <ul class="footer-thirdNav_ul">
+                <li class="footer-thirdNav_item">
+                    <a class="footer-thirdNav_link" href="#">FB</a>
                 </li>
-                <li class="third-nav_item"> <a class="third-nav_link" href="#">TW</a></li>
-                <li class="third-nav_item"><a class=" third-nav_link" href="#">G+</a></li>
+                <li class="footer-thirdNav_item">
+                    <a class="footer-thirdNav_link" href="#">TW</a>
+                </li>
+                <li class="footer-thirdNav_item">
+                    <a class=" footer-thirdNav_link href=" #">+</a>
+                </li>
             </ul>
 
         </nav>
-
-
     </footer>
 </body>
 
