--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a class="footer-thirdNav_link" href="#">TW</a>
                 </li>
                 <li class="footer-thirdNav_item">
-                    <a class=" footer-thirdNav_link href=" #">+</a>
+                    <a class=" footer-thirdNav_link" href=" #">G+</a>
                 </li>
             </ul>
 
