--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <body class="body">
     <header class="header">
         <section class="header-container">
-            <img class="header-container_logo" src="./images/logo.png" alt="logo" />
-            <h1 class="header-container_title">LayoutDeEjemplo</h1>
+            <img class="header-container__logo" src="./images/logo.png" alt="logo" />
+            <h1 class="header-container__title">LayoutDeEjemplo</h1>
         </section>
-        <nav class="header-principal_nav ">
-            <ul class="header-principalNav_ul">
-                <li class="header-principalNav_item">
-                    <a class="principal-nav_link" href="#">Link1</a>
+        <nav class="header-principal__nav ">
+            <ul class="header-principalNav__ul">
+                <li class="header-principalNav__item">
+                    <a class="principal-nav__link" href="#">Link1</a>
                 </li>
-                <li class="header-principalNav_item">
-                    <a class="principal-nav_link" href="#">Link2</a>
+                <li class="header-principalNav__item">
+                    <a class="principal-nav__link" href="#">Link2</a>
                 </li>
-                <li class="header-principalNav_item">
-                    <a class="principal-nav_link" href="#">Link3</a>
+                <li class="header-principalNav__item">
+                    <a class="principal-nav__link" href="#">Link3</a>
                 </li>
-                <li class="header-principalNav_item">
-                    <a class="principal-nav_link" href="#">Link4</a>
+                <li class="header-principalNav__item">
+                    <a class="principal-nav__link" href="#">Link4</a>
                 </li>
             </ul>
 
